--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
       }
     },
     "splash": {
-      "image": "./assets/images/icon.png",
+      "image": "./assets/images/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     }
