--- a/app.json
+++ b/app.json
@@ -16,6 +16,11 @@
       "image": "./assets/images/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "c83936ce-076e-4dfc-b6f0-40af9081d87c"
+      }
     }
   }
 }
