--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
     "api/*.js": {
-      "runtime": "vercel-nodejs@20"
+      "runtime": "vercel/node"
     }
   },
   "rewrites": [
